--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://anshumanmahato.github.io/">
-    <meta property="og:title" content="Natours - Outdoors is where life happens">
+    <meta property="og:title" content="Happy Birthday PB">
     <meta property="og:description" content="Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores nulla deserunt voluptatum nam.">
     <meta property="og:image" content="https://raw.githubusercontent.com/AnshumanMahato/Template/master/resources/img/nature.png">
 
