--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     
     <!-- Primary Meta Tags -->
     <title>Happy Birthday PB</title>
-    <meta name="title" content="Natours - Outdoors is where life happens">
+    <meta name="title" content="Happy Birthday PB">
     <meta name="description" content="Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores nulla deserunt voluptatum nam.">
 
     <!-- Open Graph / Facebook -->
